<resources>
    <string name="app_name">OneStop</string>
    <string name="action_settings">Settings</string>
    <string name="action_register">action_register</string>
    <string name="action_where">where</string>
    <string name="action_map">Map</string>
    <string name="action_locate">Locate</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_map">Maps</string>
    <string name="title_activity_locate">Locate</string>
    <string name="title_activity_where">Map2</string>
    <string name="show_location">Show Location</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="action_categories">action_categories</string>
</resources>
