<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.kyroon.onestop.delivery.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_register"
        android:orderInCategory="100"
        android:title="@string/action_register"
        android:icon="@drawable/ic_action_register"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/action_map"
        android:orderInCategory="100"
        android:title="@string/action_map"
        android:icon="@drawable/ic_action_map"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_locate"
        android:orderInCategory="100"
        android:title="@string/action_locate"
        android:icon="@drawable/ic_action_map"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_where"
        android:orderInCategory="100"
        android:title="@string/action_where"
        android:icon="@drawable/ic_action_map"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_categories"
        android:orderInCategory="100"
        android:title="@string/action_categories"

        app:showAsAction="always"
        />
</menu>
